Remove java opts since flink is moved to jdk11 (#89)